# xdgconfig

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
docs/source/: api-reference.rst  conf.py  how-to.md  index.rst
pyconfig/: __init__.py  config.py  config_unix.py  config_win.py  mixins.py
pyconfig/serializers/: __init__.py  _toml.py  _xml.py  _yaml.py
tests/: mocks.py  test_ini_config.py  test_json_config.py  test_toml_config.py  test_xml_config.py  test_yaml_config.py  utils.py
tests/test_cli/: test_argparse.py  test_typer.py
tests/test_config/: test_default.py  test_ini.py  test_json.py  test_toml.py  test_xml.py  test_yaml.py
xdgconfig/: __init__.py  asset.py  config.py  config_unix.py  config_win.py  defaultdict.py  exceptions.py  git.py  mixins.py  plugin.py  utils.py
xdgconfig/cli_tools/: __init__.py  _argparse.py  _typer.py  common.py
xdgconfig/serializers/: __init__.py  _configparser.py  _json.py  _python.py  _toml.py  _yaml.py
